# RizzAI

./: .gitignore  .pre-commit-config.yaml  README.md  clean_joboutput.bash  cpu_job_simple_test.slurm  cpu_job_strong_rizz.slurm  cpu_job_test.slurm  gpu_job.slurm  job.slurm  pyproject.toml  send-job.sh  tools.py
DataCollection/: tinder_scraper.py
blip2/: FINETUNING_GUIDE.md  generate_annontations.py  prepare_dataset.py  rizzler.py  test.py  test2.py  test_david.py  test_finetuned.py  test_generative.py  test_instructing_rizz.py  test_rizz.py  test_stronger_rizz.py  train_blip2.py  trainer.py
blip2_rizz_finetuned/checkpoint-36/: rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
data_collection/: .env-example  data_structure.md  dataset_generator.py  deduplicate_data.py  first_message creator.py  tinder_scraper.py  web_scraper.py
jobs/cpu/: instructing_rizz.slurm  simple_test.slurm  standard_rizz.slurm  strong_rizz.slurm  test_blip2.slurm
jobs/gpu/: annontate.slurm  strong_rizz.slurm  train_blip2.slurm
